ingress/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: api
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: 20.67.214.219.nip.io
    http:
      paths:
      - backend:
          service:
            name: poi
            port: 
              number: 80
        path: /api/poi
        pathType: Prefix
      - backend:
          service:
            name: poi
            port: 
              number: 80
        path: /api/docs/poi
        pathType: Prefix
      - backend:
          service:
            name: trips
            port: 
              number: 80
        path: /api/trips
        pathType: Prefix
      - backend:
          service:
            name: trips
            port: 
              number: 80
        path: /api/docs/trips
        pathType: Prefix
      - backend:
          service:
            name: user
            port: 
              number: 80
        path: /api/user-java
        pathType: Prefix
      - backend:
          service:
            name: user
            port: 
              number: 80
        path: /api/docs/user-java
        pathType: Prefix    
      - backend:
          service:
            name: userprofile
            port: 
              number: 80
        path: /api/user
        pathType: Prefix
      - backend:
          service:
            name: userprofile
            port: 
              number: 80
        path: /api/docs/user
        pathType: Prefix
