ingress/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: web
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: 20.67.214.219.nip.io
    http:
      paths:
      - backend:
          service:
            name: tripviewer
            port: 
              number: 80
        path: /
        pathType: Exact
      - backend:
          service:
            name: tripviewer
            port: 
              number: 80
        path: /Trip
        pathType: Exact
      - backend:
          service:
            name: tripviewer
            port: 
              number: 80
        path: /UserProfile
        pathType: Exact
